--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     						<div class="col-sm-5 text-left">
     							<p class="footer_sitemap"> 
     							    <router-link to="/jobs">Jobs</router-link> | 
-    							    <a href="/pages/"+$root.site+"-privacy-policy">Privacy Policy</a> | 
+    							    <a href="'/pages/'+$root.site+'-privacy-policy'">Privacy Policy</a> | 
     							    <a href="/contact_us">Contact Us</a> | <br class="show_phone"> 
     							    <a href="https://www.mallmaverick.com" target="_blank">Powered by Mall Maverick</a>  
 							    </p>
