--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     						<div class="col-sm-4 text-center">
     						</div>
     						<div class="col-sm-3 text-right">
-    						    <div>
+    						    <div class="social_icons">
     						        <a href="https://www.pinterest.com/hrctoronto" target="_blank" class="social_link_icon social_twitter" :alt="property.name + ' Pinterest'"><i class="fa fa-pinterest"></i><p style="display:none;">Pinterest icon</p></a>
     					<a href="https://www.instagram.com/" target="_blank" class="social_link_icon social_twitter" :alt="property.name + ' Instagram'"><i class="fa fa-instagram"></i><p style="display:none;">Instagram icon</p></a>
     					<a href="http://www.twitter.com/" target="_blank" class="social_link_icon social_twitter" :alt="property.name + ' Twitter'"><i class="fa fa-twitter"></i><p style="display:none;">Twitter icon</p></a>
