Langham Square 1.0  /index.html

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     					<div class="row" style="margin:auto">
     						<div class="col-sm-5 text-left">
     							<p class="footer_sitemap"> 
-    							    <router-link to="/jobs">Jobs</router-link> | 
-    							    <a :href="'/pages/'+$root.site+'-privacy-policy'">Privacy Policy</a> | 
-    							    <a href="/contact_us">Contact Us</a> | <br class="show_phone"> 
+    							    <router-link :to="/jobs">Jobs</router-link> | 
+    							    <router-link to="'/pages/'+$root.site+'-privacy-policy'">Privacy Policy</router-link> | 
+    							    <router-link to="/contact_us">Contact Us</router-link> | <br class="show_phone"> 
     							    <a href="https://www.mallmaverick.com" target="_blank">Powered by Mall Maverick</a>  
 							    </p>
     							<p class="" v-if="property"> {{property.address1}}, {{property.city}}, {{property.postal_code}} {{property.province_state}} <span v-if="property.contact_phone">-  {{property.contact_phone}}</span></p>
