--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     					<div class="row" style="margin:auto">
     						<div class="col-sm-5 text-left">
     							<p class="footer_sitemap"> 
-    							    <router-link :to="/jobs">Jobs</router-link> | 
-    							    <router-link to="'/pages/'+$root.site+'-privacy-policy'">Privacy Policy</router-link> | 
+    							    <router-link to="/jobs">Jobs</router-link> | 
+    							    <router-link :to="'/pages/'+$root.site+'-privacy-policy'">Privacy Policy</router-link> | 
     							    <router-link to="/contact_us">Contact Us</router-link> | <br class="show_phone"> 
     							    <a href="https://www.mallmaverick.com" target="_blank">Powered by Mall Maverick</a>  
 							    </p>
