Langham Square 1.0  /index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     					<div class="row" style="margin:auto">
     						<div class="col-sm-5 text-left">
     							<p class="footer_sitemap"> 
-    							    <span @click="toggle_sitemap = !toggle_sitemap">Site Map</span> |
+    							    <span @click="toggleSiteMap()">Site Map</span> |
     							    <router-link to="/jobs">Jobs</router-link> | 
     							    <router-link :to="'/pages/'+$root.site+'-privacy-policy'">Privacy Policy</router-link> | 
     							    <router-link to="/contact_us">Contact Us</router-link> | <br class="show_phone"> 
