--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     					</div>
     				</div>
     				<transition  name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="animated fadeOut">
-    					<div class="footer-bottom hidden-phone " v-if="toggle_sitemap" id="footer_sitemap">
+    					<div class="footer-bottom hidden-phone " v-show="toggle_sitemap" id="footer_sitemap">
     						<div class="footer-bottom-title-div ">
     							<div class="page_container">
     								<div v-for="item in menu_items" :id="item.parent_id" class="footer_menu_title col-sm-2">
