Langham Square 1.0  /index.html

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     						<div class="col-sm-5 text-left">
     							<p class="footer_sitemap"> 
     							    <span @click="toggleSiteMap()">Site Map</span> |
+    							    <router-link to="/contact_us">Management Office</router-link> | <br class="show_phone"> 
     							    <router-link to="/jobs">Jobs</router-link> | 
-    							    <router-link to="/contact_us">Contact Us</router-link> | <br class="show_phone"> 
     							    <router-link :to="'/pages/'+$root.site+'-privacy-policy'">Privacy Policy</router-link> | 
     							    <a href="https://www.mallmaverick.com" target="_blank">Powered by Mall Maverick</a>  
 							    </p>
