--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     							<p class="footer_sitemap"> 
     							    <span @click="toggleSiteMap()">Site Map</span> |
     							    <router-link to="/contact_us">Management Office</router-link> | <br class="show_phone"> 
-    							    <router-link to="/jobs">Jobs</router-link> | 
+    							    <router-link to="/leasing">Leasing</router-link> | 
     							    <router-link :to="'/pages/'+$root.site+'-privacy-policy'">Privacy Policy</router-link> | 
     							    <a href="https://www.mallmaverick.com" target="_blank">Powered by Mall Maverick</a>  
 							    </p>
