--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     							    <router-link to="/leasing">Leasing</router-link> | 
     							    <router-link :to="'/pages/'+$root.site+'-privacy-policy'">Privacy Policy</router-link> | 
     							    <a href="/login" target="_blank">Admin Login</a>  
-    							    <a href="https://www.mallmaverick.com" target="_blank">Powered by Mall Maverick</a>  
+    							    
 							    </p>
-    							<p class="" v-if="property"> {{property.address1}}, {{property.city}}, {{property.postal_code}} {{property.province_state}} <span v-if="property.contact_phone">-  {{property.contact_phone}}</span></p>
+    							<p class="" v-if="property"> <a href="https://www.mallmaverick.com" target="_blank">Powered by Mall Maverick</a>   | {{property.address1}}, {{property.city}}, {{property.postal_code}} {{property.province_state}} <span v-if="property.contact_phone">-  {{property.contact_phone}}</span></p>
     						</div>
     						<div class="col-sm-4 text-center">
     						</div>
