Langham Square 1.0  /index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     							    <a href="/login" target="_blank">Admin Login</a>  
     							    
 							    </p>
-    							<p class="" v-if="property"> <a href="https://www.mallmaverick.com" target="_blank">Powered by Mall Maverick</a> | {{property.address1}}, {{property.city}}, {{property.postal_code}} {{property.province_state}} <span v-if="property.contact_phone">-  {{property.contact_phone}}</span></p>
+    							<p class="" v-if="property"> <a href="https://www.mallmaverick.com" target="_blank"> {{property.address1}}, {{property.city}}, {{property.postal_code}} {{property.province_state}} <span v-if="property.contact_phone">-  {{property.contact_phone}}</span></p>
     						</div>
     						<div class="col-sm-4 text-center">
     						</div>
