--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 					<a href="https://www.instagram.com/" target="_blank" class="social_link_icon social_twitter" :alt="property.name + ' Instagram'"><i class="fa fa-instagram"></i><p style="display:none;">Instagram icon</p></a>
                 					<a href="http://www.twitter.com/" target="_blank" class="social_link_icon social_twitter" :alt="property.name + ' Twitter'"><i class="fa fa-twitter"></i><p style="display:none;">Twitter icon</p></a>
     						    </div>
-    							<p class="footer_copyright">&copy; Copyright {{copyright_year}} {{property.name}} | <a href="https://www.mallmaverick.com" target="_blank">Powered by Mall Maverick</a> |
+    							<p class="footer_copyright">&copy; Copyright {{copyright_year}} {{property.name}} | <a href="https://www.mallmaverick.com" target="_blank">Powered by Mall Maverick</a>
     							</p>
     							<p class="mourgard_logo">
     								<!--<a href="https://www.morguard.com/" target="_blank"><img src="//codecloud.cdn.speedyrails.net/sites/5b16b9686e6f6426c91e0000/image/png/1522094865211/morguard logo.png" class="" style="height:35px" alt="Managed by Morguard"></a>-->
