Langham Square 1.0  /index.html

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     						    </div>
     							<p class="footer_copyright">&copy; Copyright {{copyright_year}} {{property.name}} | <a href="https://www.mallmaverick.com" target="_blank">Powered by Mall Maverick</a>
     							</p>
-    							<p class="mourgard_logo">
+    							<!--<p class="mourgard_logo">-->
     								<!--<a href="https://www.morguard.com/" target="_blank"><img src="//codecloud.cdn.speedyrails.net/sites/5b16b9686e6f6426c91e0000/image/png/1522094865211/morguard logo.png" class="" style="height:35px" alt="Managed by Morguard"></a>-->
-    							</p>
+    							<!--</p>-->
     						</div>
     						</div>
     					</div>
