--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     						<div class="footer-bottom-title-div ">
     							<div class="page_container">
     								<div v-for="item in menu_items" :id="item.parent_id" class="footer_menu_title col-sm-2">
-    									<router-link v-if="item.sub_menu" :to="item.href" :id="item.id" exact>{{item.name}} </router-link>
+    									<router-link v-if="!item.sub_menu" :to="item.href" :id="item.id" exact>{{item.name}} </router-link>
     									<span v-else>{{item.name}}</span>
     									<div v-for="sub_menu in item.sub_menu">
     										<router-link :to="sub_menu.href" :id="sub_menu.id" exact>{{sub_menu.name}} </router-link>
