--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     							    <router-link to="/leasing">Leasing</router-link> | 
     							    <router-link :to="'/pages/'+$root.site+'-privacy-policy'">Privacy Policy</router-link> | 
     							    <a href="/login" target="_blank">Admin Login</a>  
-    							    
+    							    <router-link to="/jobs">Career</router-link> 
 							    </p>
     							<p class="" v-if="property"> {{property.address1}}, {{property.city}}, {{property.postal_code}} {{property.province_state}} <span v-if="property.contact_phone">-  {{property.contact_phone}}</span></p>
     						</div>
