--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     						<div class="col-md-6 text-right">
     						    <div class="social_icons">
                 					<a href="https://www.facebook.com/LanghamSquareCA" target="_blank" class="social_link_icon social_fb" :alt="property.name +' Facebook'"><i class="fa fa-facebook"></i><p style="display:none;">Facebook icon</p></a>
-                					<a href="https://www.instagram.com/" target="_blank" class="social_link_icon social_twitter" :alt="property.name + ' Instagram'"><i class="fa fa-instagram"></i><p style="display:none;">Instagram icon</p></a>
+                					<a href="https://www.instagram.com/langhamsquare" target="_blank" class="social_link_icon social_twitter" :alt="property.name + ' Instagram'"><i class="fa fa-instagram"></i><p style="display:none;">Instagram icon</p></a>
                 					<a href="http://www.twitter.com/" target="_blank" class="social_link_icon social_twitter" :alt="property.name + ' Twitter'"><i class="fa fa-twitter"></i><p style="display:none;">Twitter icon</p></a>
     						    </div>
     							<p class="footer_copyright">&copy; Copyright {{copyright_year}} {{property.name}} <span class="hidden_phone">|</span><br class="show_phone">  <a href="https://www.mallmaverick.com" target="_blank">Powered by Mall Maverick</a>
