--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     							    <router-link to="/leasing">Leasing</router-link> | 
     							    <router-link :to="'/pages/'+$root.site+'-privacy-policy'">Privacy Policy</router-link> |
     							    <router-link to="/jobs">Careers</router-link> 
+    							    <router-link to="/website_support">Website Support</router-link>
 							    </p>
     							<p class="" v-if="property"> {{property.address1}}, {{property.city}}, {{property.postal_code}} {{property.province_state}} <span v-if="property.contact_phone">-  {{property.contact_phone}}</span></p>
     						</div>
