--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         <link href="//codecloud.cdn.speedyrails.net/sites/59bac7db6e6f644f22ba0000/text/css/1485967426000/map.css" rel="stylesheet">
 		<script src="https://use.fontawesome.com/9cb86d00ca.js"></script>
 		<link rel="stylesheet" href="/style.css">
-		<!--<script>-->
-		<!--	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){-->
-		<!--	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),-->
-		<!--	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)-->
-		<!--	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');-->
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 			
-		<!--	ga('create', 'UA-69974835-46', 'auto');-->
-		<!--	ga('send', 'pageview');-->
-		<!--</script>-->
+			ga('create', 'UA-115200481-25', 'auto');
+			ga('send', 'pageview');
+		</script>
 	</head>
 	<body>
 	    {%raw-%}
