--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="">
         <title>{{meta_title}}</title>
 		<link rel="shortcut icon" href="//codecloud.cdn.speedyrails.net/sites/5c507fc56e6f6477c2010000/image/png/1553882234989/favicon_50px.png" type="image/x-icon" />
-		<!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">-->
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="//5a1891476e6f645140560000.codecloudapp.com/agile.css">
 		<link href="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.10.0/css/lightbox.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
